--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,7 +33,7 @@ datafeed_hive.hive_auth=true
 datafeed_hdfs.hdfs_url=hdfs://172.16.50.80:8020/
 datafeed_hdfs.hdfs_username=hdfs
 datafeed_hdfs.hdfs_path=/data/
-datafeed_rest.host=172.16.80.32
+datafeed_rest.host=172.16.50.24
 datafeed_rest.port=8083
 datafeed_rest.username=
 datafeed_rest.password=
@@ -47,11 +47,14 @@ kafka.keUrl=http://172.16.50.22:8048
 kafka.managerUrl=http://172.16.50.21:8081/clusters/kafka21
 metagrid.dsmUrl=http://10.111.134.92:8099/hubble/metagrid/v2/api
 
-mir.sdk.oneaa.endpoint=http://172.16.50.80:8080/one-aa-api
-mir.sdk.oneaa.clientid=fd4ad6a3-24c0-4d45-96e9-b743c6a32e61
-mir.sdk.oneaa.secret=ebf0d881-5d66-4c3f-96e0-fe5f5f3a9d71
+#mir.sdk.oneaa.endpoint=http://172.16.50.80:8080/one-aa-api
+#mir.sdk.oneaa.clientid=fd4ad6a3-24c0-4d45-96e9-b743c6a32e61
+#mir.sdk.oneaa.secret=ebf0d881-5d66-4c3f-96e0-fe5f5f3a9d71
+mir.sdk.oneaa.endpoint=http://172.16.50.21/one-aa-api
+mir.sdk.oneaa.clientid=7b236c2b-1814-49b3-8594-ca553a4e74f1
+mir.sdk.oneaa.secret=ebea5531-e6c3-4a46-ae5a-e4d84bc9df29
 mir.sdk.prefix=
-mir.sdk.auth.bypass=true
+mir.sdk.auth.bypass=false
 mir.sdk.log.space=auditlogger
 mir.sdk.cached.duration=30
 mir.sdk.policyFile.path=classpath:policy.yml
